--- a/text_tool.html
+++ b/text_tool.html
@@ -45,6 +45,33 @@
             margin-top: 200px;
             margin-left: 90px;
         }
+        .buttons_div
+        {
+            position: absolute;
+            display: flex;
+            justify-content: space-around;
+            margin-top: 450px;
+            gap: 20px;
+            margin-left: 250px;
+          
+        }
+        .action_btn{
+            height: 40px;
+            width: 200px;
+            border: none;
+            border-radius: 5px;
+            font-weight: bold;
+            font-family: 'Times New Roman', Times, serif;
+            background-color: #9494b8;
+            cursor: pointer;   
+        }
+        .action_btn:hover
+        {
+            background-color: #8b8b93;
+
+        }
+
+
 
     </style>
    
@@ -53,6 +80,13 @@
     <h1 class="heading">Text &nbsp;Tool</h1>
     <div class="container">
         <input type="text" class="input" id="input">
+        <div class="buttons_div">
+            <button class="action_btn">Uppper_Case</button>
+            <button class="action_btn">Lower_Case</button>
+            <button class="action_btn"> Charater_Count</button>
+            <button class="action_btn">Words_Count</button>
+
+        </div>
     </div>
    
     
