--- a/text_tool.html
+++ b/text_tool.html
@@ -94,7 +94,7 @@
         <div class="buttons_div">
             <button class="action_btn" onclick="Upper_Case()">Upper_Case</button>
             <button class="action_btn" onclick="Lower_Case()">Lower_Case</button>
-            <button class="action_btn"> Charater_Count</button>
+            <button class="action_btn" onclick="Charater_Count()"> Character_Count</button>
             <button class="action_btn">Words_Count</button>
 
 
@@ -113,6 +113,13 @@
             const InputElement = document.getElementById("input_txt")
             const reultElement = document.getElementById("result_txt")
             reultElement.innerText = InputElement.value.toLowerCase()
+          
+        }
+        function Charater_Count()
+        {
+            const InputElement = document.getElementById("input_txt")
+            const reultElement = document.getElementById("result_txt")
+            reultElement.innerText = `Total Charater :${InputElement.value.length}`
           
         }
     </script>
