--- a/text_tool.html
+++ b/text_tool.html
@@ -89,7 +89,7 @@
     <div class="container">
         <input type="text" class="input" id="input_txt">
         <p class="result_txt" id="result_txt">
-          
+        <!-- Its is a text in dom manuplation  -->
         </p>
         <div class="buttons_div">
             <button class="action_btn" onclick="ActionResult_Case('Upper_Case')">Upper_Case</button>
