--- a/text_tool.html
+++ b/text_tool.html
@@ -85,6 +85,7 @@
    
 </head>
 <body class="body">
+<!-- heading -->
     <h1 class="heading">Text &nbsp;Tool</h1>
     <div class="container">
         <input type="text" class="input" id="input_txt">
