--- a/text_tool.html
+++ b/text_tool.html
@@ -93,6 +93,7 @@
         <!-- Its is a text in dom manuplation  -->
         </p>
         <div class="buttons_div">
+            <!-- added division -->
             <button class="action_btn" onclick="ActionResult_Case('Upper_Case')">Upper_Case</button>
             <button class="action_btn" onclick="ActionResult_Case('Lower_Case')">Lower_Case</button>
             <button class="action_btn" onclick="ActionResult_Case('Charater_Count')"> Character_Count</button>
