--- a/text_tool.html
+++ b/text_tool.html
@@ -102,6 +102,7 @@
 
         </div>
     </div>
+     <!-- added javascript -->
     <script>
         const InputElement = document.getElementById("input_txt")
         const reultElement = document.getElementById("result_txt")
