--- a/text_tool.html
+++ b/text_tool.html
@@ -108,7 +108,7 @@
         const reultElement = document.getElementById("result_txt")
 
       
-
+        // function created by using switch case
     function ActionResult_Case(action)
     {
            
