--- a/text_tool.html
+++ b/text_tool.html
@@ -111,9 +111,10 @@
         // function created by using switch case
     function ActionResult_Case(action)
     {
-           
+        //    switch
         switch(action)
         {
+            //toUpperCase()
             case'Upper_Case':
                 reultElement.innerText =  InputElement.value.toUpperCase()
                 break;
