--- a/text_tool.html
+++ b/text_tool.html
@@ -118,6 +118,7 @@
             case'Upper_Case':
                 reultElement.innerText =  InputElement.value.toUpperCase()
                 break;
+            //toLoerCase()
             case'Lower_Case':
                 reultElement.innerText = InputElement.value.toLowerCase()
                 break;
