InputElement.value.length

--- a/text_tool.html
+++ b/text_tool.html
@@ -122,6 +122,7 @@
             case'Lower_Case':
                 reultElement.innerText = InputElement.value.toLowerCase()
                 break;
+            //InputElement.value.length
             case'Charater_Count':
                   reultElement.innerText = `Total Charater :${InputElement.value.length}`
                 break;
