InputElement.value.split.length

--- a/text_tool.html
+++ b/text_tool.html
@@ -126,6 +126,7 @@
             case'Charater_Count':
                   reultElement.innerText = `Total Charater :${InputElement.value.length}`
                 break;
+            //InputElement.value.split(" ").length    
             default:
                 reultElement.innerText = `Total Charater :${InputElement.value.split(" ").length}`
                 
