always name ur file as index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- title -->
     <title>Text Tool</title>
     <style>
+        /* always name your file as index */
         .body
         {
             margin: 0px;
