--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- title -->
     <title>Text Tool</title>
     <style>
+        /* Assigenment completed */
         /* always name your file as index */
         .body
         {
